home/radarr/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
spec:
  selector:
    app.kubernetes.io/name: radarr
  ports:
    - port: 7878
      targetPort: radarr
      name: radarr
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      automountServiceAccountToken: false
      restartPolicy: Always
      containers:
        - name: radarr
          image: linuxserver/radarr:5.26.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7878
              protocol: TCP
              name: radarr
          volumeMounts:
            - mountPath: /movies
              name: jellyfin-video
            - mountPath: /library/anime
              name: media-library
              subPath: anime/movies
            - mountPath: /downloads
              name: qbittorrent-downloads
            - mountPath: /config
              name: radarr-config
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
              ephemeral-storage: 128Mi
            limits:
              cpu: 750m
              memory: 1Gi
              ephemeral-storage: 256Mi
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-data
        - name: jellyfin-video
          persistentVolumeClaim:
            claimName: jellyfin-media
        - name: media-library
          persistentVolumeClaim:
            claimName: media-library
        - name: qbittorrent-downloads
          persistentVolumeClaim:
            claimName: qbittorrent-data
