home/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: radarr.homelab.local
spec:
  ingressClassName: nginx-internal
  rules:
    - host: radarr.<homelab-domain>
      http:
        paths:
          - path: /
            backend:
              service:
                name: radarr
                port:
                  name: radarr
            pathType: Prefix
  tls:
    - hosts:
        - radarr.<homelab-domain>
      secretName: "radarr.homelab-cert"
